# bachelor-thesis

./: .gitignore  LICENSE  README.md  TECHNOLOGY.md
poc/: README.md  docker-compose.yml  spin.toml
poc/api/chat/: Cargo.toml
poc/api/frontend/: Cargo.toml
poc/api/message/: Cargo.toml
poc/api/session/: Cargo.toml
poc/api/truncator/: Cargo.toml
poc/api/user/: Cargo.toml
poc/backend/ws-service/: Cargo.toml
poc/backend_wasmedge/config/: secrets.json
poc/backend_wasmedge/message-service/: run.sh
poc/benchmarks/: wasi-chat.jmx
poc/client/: package.json  tailwind.config.cjs  vite.config.ts
poc/client/src/: main.tsx
poc/nodejs-alternative/: Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json
poc/old_backend/backend_wasmedge/message-service/: Cargo.toml
poc/old_backend/backend_wasmedge/message-service/src/: message.rs
poc/tests/: chats.sh  messages.sh  reset_database.sh  run.sh  sessions.sh  truncator.sh  users.sh
poc/tests/seeders/: chat_seeder.sh  session_seeder.sh
poc/tests/utils/: truncator.sh
poc/web/: .env  index.html  package-lock.json  package.json  vite.config.ts
poc/web/src/: App.tsx  index.css  main.tsx
presentation/: Presentazione tesi - WASI.pptx  discorso-tesi.txt
prototypes/1.file/: README.md
prototypes/1.file/src/: main.rs
prototypes/2.network/: README.md
prototypes/2.network/src/: client.rs  main.rs  server.rs
prototypes/3.wasmedge-http/: README.md
prototypes/3.wasmedge-http/client/: Cargo.toml
prototypes/3.wasmedge-http/server/: Cargo.toml
prototypes/5.fullstack/: README.md  start-wasmedge.sh
prototypes/5.fullstack/server-wasmedge/: Cargo.toml
prototypes/5.fullstack/server-wasmedge/.cargo/: config.toml
prototypes/5.fullstack/server-wasmedge/src/: handler.rs  main.rs  mime.rs  response.rs
prototypes/6.microservice/: Cargo.toml  Dockerfile  docker-compose.yml  messages.json
prototypes/7.spin-framework/: Cargo.toml  spin.toml
tex/: thesis.tex
tex/bibliography/: bibliography.bib
(+83 files in other folders)
