[package]
name = "ws_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite_wasi = "*"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3"
mysql_async_wasi = "*"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
log="*"
simplelog="*"
ulid="*"
chrono= { version = "0.4", features = ["serde"] }
mysql_common = { version = "0.29.2", features = ["chrono"] }
dapr_sdk_wasi = { git = "https://github.com/second-state/dapr-sdk-wasi" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3"